--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,7 +114,11 @@ h2 {
   height: 160px;
   position: relative;
 }
-
+.imgcontainer {
+  display: flex;
+  justify-content: center;  
+  align-items: center;    
+}
 .two {
   width: 160px;
   height: 160px;
