--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,7 +83,9 @@ a {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 14px;
 }
-
+img {
+  vertical-align: middle;
+}
 strong {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 14px;
@@ -114,11 +116,7 @@ h2 {
   height: 160px;
   position: relative;
 }
-.imgcontainer {
-  display: flex;
-  justify-content: center;  
-  align-items: center;    
-}
+
 .two {
   width: 160px;
   height: 160px;
